<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.makoval.githubapp.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.makoval.githubapp.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/larger_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:constraintLayout="@{viewModel.status}"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:id="@+id/text_personal_access_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/personal_access_token"
                android:textColor="@color/blue"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/personal_access_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:backgroundTint="@color/blue"
                android:hint="@string/personal_access_token"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#918C8C"
                app:layout_constraintStart_toStartOf="@id/text_personal_access_token"
                app:layout_constraintTop_toBottomOf="@id/text_personal_access_token" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:ellipsize="middle"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@color/green"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:reposApiStatus="@{viewModel.status}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
